Add MulticallProvider and Hardhat config / dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# Dependency directories
 node_modules/
+
+# Environments
+.env
+.venv
+env/
+venv/
+
+# Cache
+cache/
+
+# Others
+.DS_Store
+.vscode
+.idea
