--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://aperture.finance/",
   "dependencies": {
+    "@0xsequence/multicall": "^0.43.26",
     "@aperture_finance/uniswap-v3-automation-sdk": "^0.0.4",
     "@ethersproject/providers": "^5.7.2",
     "@uniswap/sdk-core": "^3.2.2",
@@ -28,7 +29,14 @@
     "ethers": "^5.7.2"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.16.2",
+    "chai": "^4.3.7",
     "hardhat": "^2.14.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
