--- a/package.json
+++ b/package.json
@@ -29,14 +29,6 @@
     "ethers": "^5.7.2"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.16.2",
-    "chai": "^4.3.7",
-    "hardhat": "^2.14.0",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "prettier": "^2.8.8"
   }
 }
