--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean"
@@ -30,6 +30,7 @@
     "ethers": "^5.7.2"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4"
   }
 }
