--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean"
@@ -24,10 +24,12 @@
   "dependencies": {
     "@0xsequence/multicall": "^0.43.26",
     "@aperture_finance/uniswap-v3-automation-sdk": "^0.0.7",
+    "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@uniswap/sdk-core": "^3.2.2",
     "@uniswap/v3-sdk": "^3.9.0",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "jsbi": "^3.1.4"
   },
   "devDependencies": {
     "prettier": "^2.8.8",
