--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://aperture.finance/",
   "dependencies": {
     "@0xsequence/multicall": "^0.43.27",
-    "@aperture_finance/uniswap-v3-automation-sdk": "^0.0.8",
+    "@aperture_finance/uniswap-v3-automation-sdk": "^0.0.9",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@uniswap/sdk-core": "^3.2.2",
@@ -32,7 +32,16 @@
     "jsbi": "^3.1.4"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@types/chai": "^4.3.5",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.16.3",
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
+    "hardhat": "^2.14.0",
     "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
