--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean"
@@ -28,6 +28,7 @@
     "@ethersproject/providers": "^5.7.2",
     "@uniswap/sdk-core": "^3.2.2",
     "@uniswap/v3-sdk": "^3.9.0",
+    "axios": "^1.4.0",
     "ethers": "^5.7.2",
     "jsbi": "^3.1.4"
   },
