--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@types/chai": "^4.3.5",
     "@types/chai-as-promised": "^7.1.5",
