--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
+    "test": "npx hardhat test",
+    "lint": "eslint ./ --quiet",
+    "lint:fix": "eslint ./ --quiet --fix && prettier -w ./",
+    "prettier": "prettier -c ./",
     "graphql:generate:data": "graphql-codegen --config graphql.data.codegen.config.ts"
   },
   "repository": {
@@ -24,7 +28,7 @@
   "homepage": "https://aperture.finance/",
   "dependencies": {
     "@0xsequence/multicall": "^0.43.27",
-    "@aperture_finance/uniswap-v3-automation-sdk": "^0.1.1",
+    "@aperture_finance/uniswap-v3-automation-sdk": "^0.1.3",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@uniswap/sdk-core": "^3.2.2",
@@ -43,8 +47,13 @@
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "graphql": "^16.6.0",
     "hardhat": "^2.14.0",
     "prettier": "^2.8.8",
