--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint ./ --quiet",
     "lint:fix": "eslint ./ --quiet --fix && prettier -w ./",
     "prettier": "prettier -c ./",
-    "graphql:generate:data": "graphql-codegen --config graphql.data.codegen.config.ts"
+    "graphql:generate:data": "graphql-codegen --config graphql.data.codegen.config.ts",
+    "graphql:generate:thegraph": "graphql-codegen --config graphql.thegraph.codegen.config.ts"
   },
   "repository": {
     "type": "git",
