--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
@@ -29,11 +29,12 @@
   "homepage": "https://aperture.finance/",
   "dependencies": {
     "@0xsequence/multicall": "^0.43.29",
-    "@aperture_finance/uniswap-v3-automation-sdk": "^0.1.9",
+    "@aperture_finance/uniswap-v3-automation-sdk": "^0.2.2",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@uniswap/v3-sdk": "^3.9.0",
     "axios": "^1.4.0",
+    "big.js": "^6.2.1",
     "ethers": "5.7.2"
   },
   "devDependencies": {
@@ -42,12 +43,14 @@
     "@graphql-codegen/typescript-operations": "^3.0.4",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@types/big.js": "^6.1.6",
     "@types/chai": "^4.3.5",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@uniswap/sdk-core": "^3.2.3",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.42.0",
