--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs: # each workflow consists of 1+ jobs; by default, all jobs run in parallel
           cache: 'yarn'
 
       - name: Install dependencies 📦
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run linter
         run: yarn lint
@@ -34,7 +34,7 @@ jobs: # each workflow consists of 1+ jobs; by default, all jobs run in parallel
           cache: 'yarn'
 
       - name: Install dependencies 📦
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run prettier check
         run: yarn prettier
@@ -52,7 +52,7 @@ jobs: # each workflow consists of 1+ jobs; by default, all jobs run in parallel
           cache: 'yarn'
 
       - name: Install dependencies 📦
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run tests
         run: yarn test
