--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
+  "version": "0.3.0",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
-  "version": "0.2.2",
+  "author": "Aperture Finance <engineering@aperture.finance>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Aperture-Finance/uniswap-v3-automation-helpers/issues"
+  },
+  "homepage": "https://aperture.finance/",
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
@@ -21,15 +27,14 @@
     "uniswap",
     "aperture"
   ],
-  "author": "Aperture Finance <engineering@aperture.finance>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Aperture-Finance/uniswap-v3-automation-helpers/issues"
-  },
-  "homepage": "https://aperture.finance/",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@0xsequence/multicall": "^0.43.30",
-    "@aperture_finance/uniswap-v3-automation-sdk": "^0.2.3",
+    "@aperture_finance/uniswap-v3-automation-sdk": "^0.2.4",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@uniswap/v3-sdk": "^3.9.0",
