--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,5 +57,6 @@ jobs: # each workflow consists of 1+ jobs; by default, all jobs run in parallel
       - name: Run tests
         run: yarn test
         env:
+          INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
           MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
           GOERLI_RPC_URL: ${{ secrets.GOERLI_RPC_URL }}
