--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dist"
   ],
   "dependencies": {
-    "@0xsequence/multicall": "^0.43.34",
+    "@0xsequence/multicall": "0.43.34",
     "@aperture_finance/uniswap-v3-automation-sdk": "1.0.1",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
@@ -54,8 +54,8 @@
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.44.0",
