--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
   "author": "Aperture Finance <engineering@aperture.finance>",
   "license": "MIT",
@@ -38,6 +38,8 @@
   "dependencies": {
     "@0xsequence/multicall": "0.43.34",
     "@aperture_finance/uniswap-v3-automation-sdk": "1.2.1",
+    "@uniswap/permit2-sdk": "^1.2.0",
+    "@uniswap/smart-order-router": "^3.15.2",
     "@uniswap/v3-sdk": "^3.10.0",
     "axios": "^1.4.0",
     "big.js": "^6.2.1",
