--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,3 +60,5 @@ jobs: # each workflow consists of 1+ jobs; by default, all jobs run in parallel
           INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
           MAINNET_RPC_URL: ${{ secrets.MAINNET_RPC_URL }}
           GOERLI_RPC_URL: ${{ secrets.GOERLI_RPC_URL }}
+          ARBITRUM_RPC_URL: ${{ secrets.ARBITRUM_RPC_URL }}
+          ONEINCH_API_KEY: ${{ secrets.ONEINCH_API_KEY }}
