--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
   "author": "Aperture Finance <engineering@aperture.finance>",
   "license": "MIT",
@@ -43,6 +43,7 @@
     "@uniswap/v3-sdk": "^3.10.0",
     "axios": "^1.4.0",
     "big.js": "^6.2.1",
+    "bottleneck": "^2.19.5",
     "ethers": "5.7.2"
   },
   "devDependencies": {
