Make simulators adaptive (#100)
* Make simulators adaptive

* Add `owner` property to `PositionDetails`

* refactor

* chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
   "author": "Aperture Finance <engineering@aperture.finance>",
   "license": "MIT",
@@ -37,14 +37,15 @@
   },
   "dependencies": {
     "@0xsequence/multicall": "0.43.34",
-    "@aperture_finance/uniswap-v3-automation-sdk": "1.4.2",
+    "@aperture_finance/uniswap-v3-automation-sdk": "1.4.3",
     "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/smart-order-router": "^3.15.2",
     "@uniswap/v3-sdk": "^3.10.0",
     "axios": "^1.4.0",
     "big.js": "^6.2.1",
     "bottleneck": "^2.19.5",
-    "ethers": "5.7.2"
+    "ethers": "5.7.2",
+    "jsbi": "^3.2.5"
   },
   "devDependencies": {
     "@ethersproject/bignumber": "^5.7.0",
@@ -52,24 +53,24 @@
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/big.js": "^6.2.0",
     "@types/chai": "^4.3.5",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.4.7",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "chai": "^4.3.7",
+    "@types/node": "^20.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "chai": "^4.3.8",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.3.1",
-    "eslint": "^8.46.0",
+    "eslint": "^8.48.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "graphql": "^16.7.1",
-    "hardhat": "^2.17.1",
+    "hardhat": "^2.17.2",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
