--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
-  "version": "1.9.3",
+  "version": "1.9.4",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
   "author": "Aperture Finance <engineering@aperture.finance>",
   "license": "MIT",
@@ -37,11 +37,11 @@
   },
   "dependencies": {
     "@0xsequence/multicall": "0.43.34",
-    "@aperture_finance/uniswap-v3-automation-sdk": "^1.6.1",
+    "@aperture_finance/uniswap-v3-automation-sdk": "1.7.1",
     "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/smart-order-router": "^3.16.23",
+    "@uniswap/smart-order-router": "^3.17.2",
     "@uniswap/v3-sdk": "^3.10.0",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "big.js": "^6.2.1",
     "bottleneck": "^2.19.5",
     "ethers": "5.7.2",
