--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
-  "version": "1.9.7",
+  "version": "1.9.8",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
   "author": "Aperture Finance <engineering@aperture.finance>",
   "license": "MIT",
@@ -36,43 +36,43 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@0xsequence/multicall": "^1.2.9",
-    "@aperture_finance/uniswap-v3-automation-sdk": "^1.7.4",
+    "@0xsequence/multicall": "^1.4.3",
+    "@aperture_finance/uniswap-v3-automation-sdk": "^1.7.5",
     "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/smart-order-router": "^3.17.2",
     "@uniswap/v3-sdk": "^3.10.0",
-    "axios": "^1.6.0",
+    "axios": "^1.6.1",
     "big.js": "^6.2.1",
     "bottleneck": "^2.19.5",
     "ethers": "5.7.2",
     "jsbi": "^3.2.5"
   },
   "devDependencies": {
-    "@ethersproject/bignumber": "^5.7.0",
-    "@ethersproject/providers": "^5.7.2",
+    "@ethersproject/bignumber": "5.7.0",
+    "@ethersproject/providers": "5.7.2",
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
-    "@types/big.js": "^6.2.1",
-    "@types/chai": "^4.3.9",
-    "@types/chai-as-promised": "^7.1.7",
-    "@types/mocha": "^10.0.3",
-    "@types/node": "^20.8.10",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/big.js": "^6.2.2",
+    "@types/chai": "^4.3.10",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/mocha": "^10.0.4",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.3.1",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "graphql": "^16.8.1",
-    "hardhat": "^2.18.3",
+    "hardhat": "^2.19.0",
     "hardhat-tracer": "^2.7.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
