--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
-  "version": "1.9.8",
+  "version": "1.9.9",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
   "author": "Aperture Finance <engineering@aperture.finance>",
   "license": "MIT",
@@ -36,12 +36,13 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@0xsequence/multicall": "^1.4.3",
-    "@aperture_finance/uniswap-v3-automation-sdk": "^1.7.5",
+    "@0xsequence/multicall": "^1.4.9",
+    "@aperture_finance/uniswap-v3-automation-sdk": "^1.8.5",
     "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/smart-order-router": "^3.17.2",
     "@uniswap/v3-sdk": "^3.10.0",
-    "axios": "^1.6.1",
+    "aperture-lens": "^0.1.3",
+    "axios": "^1.6.2",
     "big.js": "^6.2.1",
     "bottleneck": "^2.19.5",
     "ethers": "5.7.2",
@@ -53,27 +54,27 @@
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/typescript": "^3.0.4",
     "@graphql-codegen/typescript-operations": "^3.0.4",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/big.js": "^6.2.2",
-    "@types/chai": "^4.3.10",
+    "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^7.1.8",
-    "@types/mocha": "^10.0.4",
-    "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.3",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^16.3.1",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "graphql": "^16.8.1",
-    "hardhat": "^2.19.0",
+    "hardhat": "^2.19.2",
     "hardhat-tracer": "^2.7.0",
     "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   }
 }
