--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aperture_finance/uniswap-v3-automation-helpers",
-  "version": "1.13.0",
+  "version": "1.13.1",
   "description": "Helpers for Aperture's Uniswap V3 automation platform",
   "author": "Aperture Finance <engineering@aperture.finance>",
   "license": "MIT",
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "tsc --build --clean",
-    "test": "npx hardhat test",
+    "test": "npx hardhat test --v",
     "lint": "eslint ./ --quiet",
     "lint:fix": "eslint ./ --quiet --fix && prettier -w ./",
     "prettier": "prettier -c ./",
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@0xsequence/multicall": "^1.6.2",
-    "@aperture_finance/uniswap-v3-automation-sdk": "^1.11.0",
+    "@aperture_finance/uniswap-v3-automation-sdk": "^1.12.0",
     "@uniswap/permit2-sdk": "^1.2.0",
     "@uniswap/smart-order-router": "^3.20.0",
     "@uniswap/v3-sdk": "^3.10.0",
